--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
+    "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
